# CFReT-compound-prioritization-analysis

./: .gitignore  .pre-commit-config.yaml  CFReT-compound-prio.yaml  README.md  pyproject.toml
notebooks/: nb-configs.yaml
notebooks/0.download-data/: 0.download-data.ipynb  0.download-data.sh  1.download-CPJUMP1-data.ipynb  download-data.sh
notebooks/0.download-data/nbconverted/: 0.download-data.py  1.download-CPJUMP1-data.py
notebooks/1.compound-prioritization/: 1.compound-prioritization.ipynb
notebooks/1.profile-processing/: 1.processing-profiles.ipynb
src/: signatures.py  utils.py
utils/: io_utils.py  signatures.py
